Fri Aug 15 03:08:17 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - The account button in the conversations window now longer shows
	    its state as active.
	  - Removed old stuff that's not needed anymore.

Fri Aug 15 02:53:00 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Changing the tabs now focuses the entry box 100% of the time,
	    hopefully, and scrolls the text view to the bottom.

Fri Aug 15 02:45:02 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The text view in chats now scrolls to the bottom when toggling
	    the Show User List button.

Fri Aug 15 02:41:22 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - The user list button wasn't being updated to the state of the
	    current tab. Fixed.

Fri Aug 15 02:32:17 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The current chat tab no longer gets highlighting, and the
	    colors don't get "stuck."

Fri Aug 15 02:25:19 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The user list toggle button never got re-added after changing
	    how the toolbar was created. Fixed.

Fri Aug 15 02:15:20 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimDialogs.cpp:
	* src/QGaimDialogs.h:
	  - Changing the account in the drop-down list in the Join Chat
	    dialog now updates the widgets for specifying the
	    protocol-dependent chat information.

Fri Aug 15 00:55:11 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimDialogs.cpp:
	* src/QGaimDialogs.h:
	  - Added the Join Chat dialog.

Fri Aug 15 00:32:41 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Connecting to an account, disconnecting, and then connecting to
	    any account no longer crashes.
